--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tejasi Gupta</title>
+  <meta name="description" content="Tejasi Gupta — computational biophysics, molecular modelling, and graph-based analysis pipelines." />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <h1>Hello, I’m Tejasi</h1>
-  <p>This is my first GitHub Pages website.</p>
+  <main class="page">
+
+    <!-- Photo -->
+    <div class="photo-wrap">
+      <img class="photo" src="assets/profile.jpg" alt="Tejasi Gupta" />
+    </div>
+
+    <!-- Text content -->
+    <section class="content">
+      <div class="hello">Hi, I am Tejasi!</div>
+
+      <p>
+        I am interested in using computational tools to understand how biomolecules are organised and interact with one another.
+        What draws me most is the structure hidden within complex systems, and the challenge of finding clear ways to represent
+        and analyse that structure.
+      </p>
+
+      <p>
+        Working with biomolecular data has often involved translating physical systems into graph-based representations, where
+        relationships between components can be studied systematically. This has led to the development of Python-based analysis
+        pipelines that process structural information, construct meaningful representations, and explore patterns that are not
+        immediately visible from raw molecular coordinates. Through this process, careful attention to connectivity, modelling
+        choices, and interpretability has become central to how conclusions are drawn.
+      </p>
+
+      <p>
+        Building analysis pipelines step by step has been an important part of learning, as it highlights both the strengths and
+        limitations of the methods being used. Alongside this, there is a growing appreciation for the role of mathematics and
+        physics in shaping how problems in chemistry and biology are framed, from model construction to interpretation. Viewing
+        chemical and biological systems through these lenses has helped clarify assumptions, approximations, and underlying structure.
+      </p>
+
+      <p>
+        I am broadly interested in computational biophysics and molecular modelling, particularly in areas where ideas from physics,
+        chemistry, and mathematics intersect. This page is a brief reflection of what I am currently exploring and the way I like to
+        think about scientific work.
+      </p>
+    </section>
+
+    <!-- Bottom icons (centered, small, monochrome) -->
+    <footer class="footer">
+      <div class="icon-row">
+
+        <!-- LinkedIn -->
+        <a class="icon-link"
+           href="https://www.linkedin.com/in/tejasi-gupta-959815156/"
+           target="_blank"
+           rel="noreferrer"
+           aria-label="LinkedIn">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor"
+              d="M20.45 20.45h-3.56v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85 0-2.13 1.45-2.13 2.95v5.66H9.35V9h3.41v1.56h.05
+              c.47-.9 1.63-1.85 3.36-1.85 3.59 0 4.25 2.36 4.25 5.43v6.31ZM5.34 7.43a2.07 2.07 0 1 1 0-4.14
+              2.07 2.07 0 0 1 0 4.14ZM7.12 20.45H3.56V9h3.56v11.45ZM22.23 0H1.77C.79 0 0 .78 0 1.74v20.52
+              C0 23.22.79 24 1.77 24h20.46C23.2 24 24 23.22 24 22.26V1.74C24 .78 23.2 0 22.23 0Z"/>
+          </svg>
+        </a>
+
+        <!-- Email -->
+        <a class="icon-link"
+           href="mailto:tejasi1202@gmail.com"
+           aria-label="Email">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="currentColor"
+              d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2Zm0 4-8 5-8-5V6l8 5
+              8-5v2Z"/>
+          </svg>
+        </a>
+
+      </div>
+    </footer>
+
+  </main>
 </body>
 </html>
+
+
