--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tejasi Gupta</title>
-  <meta name="description" content="Tejasi Gupta — computational biophysics, molecular modelling, and graph-based analysis pipelines." />
+  <meta name="description" content="Tejasi Gupta — undergraduate Chemistry student interested in computational biophysics, molecular dynamics, and graph-based analysis pipelines." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -21,34 +21,23 @@
       <div class="hello">Hi, I am Tejasi!</div>
 
       <p>
-        I am interested in using computational tools to understand how biomolecules are organised and interact with one another.
-        What draws me most is the structure hidden within complex systems, and the challenge of finding clear ways to represent
-        and analyse that structure.
+        I am currently an undergraduate student pursuing a degree in Chemistry at St. Stephen’s College, University of Delhi, and I am drawn to questions about how biomolecules are organised and interact with one another. I am particularly interested in using computational tools to explore the structure hidden within complex systems, in a way that remains physically and chemically meaningful.
       </p>
 
       <p>
-        Working with biomolecular data has often involved translating physical systems into graph-based representations, where
-        relationships between components can be studied systematically. This has led to the development of Python-based analysis
-        pipelines that process structural information, construct meaningful representations, and explore patterns that are not
-        immediately visible from raw molecular coordinates. Through this process, careful attention to connectivity, modelling
-        choices, and interpretability has become central to how conclusions are drawn.
+        Working with biomolecular data has often involved translating physical systems into graph-based representations, where relationships between components can be studied systematically. This has led me to develop Python-based analysis pipelines to process biomolecular structural data, construct graph-based representations, and explore patterns that are not immediately visible from raw molecular coordinates. I have also been engaging with molecular dynamics simulations as a way to connect structural organisation with underlying physical motion and interactions at the atomic scale. Through this work, I have had to make explicit choices about connectivity, representation, and modelling assumptions, which has made questions of interpretability central to how I analyse results and draw conclusions.
       </p>
 
       <p>
-        Building analysis pipelines step by step has been an important part of learning, as it highlights both the strengths and
-        limitations of the methods being used. Alongside this, there is a growing appreciation for the role of mathematics and
-        physics in shaping how problems in chemistry and biology are framed, from model construction to interpretation. Viewing
-        chemical and biological systems through these lenses has helped clarify assumptions, approximations, and underlying structure.
+        Building these pipelines step by step has been an important part of how I learn, as it highlights both the strengths and limitations of different modelling choices. Alongside this, I have come to appreciate the role of mathematics and physics in shaping how problems in chemistry and biology are framed, and in clarifying the assumptions underlying computational approaches.
       </p>
 
       <p>
-        I am broadly interested in computational biophysics and molecular modelling, particularly in areas where ideas from physics,
-        chemistry, and mathematics intersect. This page is a brief reflection of what I am currently exploring and the way I like to
-        think about scientific work.
+        I am broadly interested in computational biophysics and molecular modelling, particularly in areas where ideas from physics, chemistry, and mathematics intersect. This page is a brief reflection of what I am currently exploring and the way I like to think about scientific work.
       </p>
     </section>
 
-    <!-- Bottom icons (centered, small, monochrome) -->
+    <!-- Bottom icons -->
     <footer class="footer">
       <div class="icon-row">
 
@@ -84,5 +73,6 @@
   </main>
 </body>
 </html>
+
 
 
