--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head> 
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tejasi Gupta</title>
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+
+  <!-- Top navigation bar -->
+  <header class="topbar">
+    <nav class="nav">
+      <a href="/" class="nav-link">Home</a>
+      <a href="research.html" class="nav-link">Research</a>
+    </nav>
+  </header>
+
   <main class="page">
 
     <!-- Photo -->
@@ -16,28 +25,44 @@
       <img class="photo" src="assets/profile.jpg" alt="Tejasi Gupta" />
     </div>
 
-    <!-- Text content -->
+    <!-- Main content -->
     <section class="content">
       <div class="hello">Hi, I am Tejasi!</div>
 
       <p>
-        I am currently an undergraduate student pursuing a degree in Chemistry at St. Stephen’s College, University of Delhi, and I am drawn to questions about how biomolecules are organised and interact with one another. I am particularly interested in using computational tools to explore the structure hidden within complex systems, in a way that remains physically and chemically meaningful.
+        I am currently an undergraduate student pursuing a degree in Chemistry at St. Stephen’s College,
+        University of Delhi, and I am drawn to questions about how biomolecules are organised and interact
+        with one another. I am particularly interested in using computational tools to explore the structure
+        hidden within complex systems, in a way that remains physically and chemically meaningful.
       </p>
 
       <p>
-        Working with biomolecular data has often involved translating physical systems into graph-based representations, where relationships between components can be studied systematically. This has led me to develop Python-based analysis pipelines to process biomolecular structural data, construct graph-based representations, and explore patterns that are not immediately visible from raw molecular coordinates. I have also been engaging with molecular dynamics simulations as a way to connect structural organisation with underlying physical motion and interactions at the atomic scale. Through this work, I have had to make explicit choices about connectivity, representation, and modelling assumptions, which has made questions of interpretability central to how I analyse results and draw conclusions.
+        Working with biomolecular data has often involved translating physical systems into graph-based
+        representations, where relationships between components can be studied systematically. This has
+        led me to develop Python-based analysis pipelines to process biomolecular structural data, construct
+        graph-based representations, and explore patterns that are not immediately visible from raw molecular
+        coordinates. I have also been engaging with molecular dynamics simulations as a way to connect
+        structural organisation with underlying physical motion and interactions at the atomic scale.
+        Through this work, I have had to make explicit choices about connectivity, representation, and
+        modelling assumptions, which has made questions of interpretability central to how I analyse results
+        and draw conclusions.
       </p>
 
       <p>
-        Building these pipelines step by step has been an important part of how I learn, as it highlights both the strengths and limitations of different modelling choices. Alongside this, I have come to appreciate the role of mathematics and physics in shaping how problems in chemistry and biology are framed, and in clarifying the assumptions underlying computational approaches.
+        Building these pipelines step by step has been an important part of how I learn, as it highlights
+        both the strengths and limitations of different modelling choices. Alongside this, I have come to
+        appreciate the role of mathematics and physics in shaping how problems in chemistry and biology are
+        framed, and in clarifying the assumptions underlying computational approaches.
       </p>
 
       <p>
-        I am broadly interested in computational biophysics and molecular modelling, particularly in areas where ideas from physics, chemistry, and mathematics intersect. This page is a brief reflection of what I am currently exploring and the way I like to think about scientific work.
+        I am broadly interested in computational biophysics and molecular modelling, particularly in areas
+        where ideas from physics, chemistry, and mathematics intersect. This page is a brief reflection of
+        what I am currently exploring and the way I like to think about scientific work.
       </p>
     </section>
 
-    <!-- Bottom icons -->
+    <!-- Footer icons -->
     <footer class="footer">
       <div class="icon-row">
 
@@ -73,6 +98,3 @@
   </main>
 </body>
 </html>
-
-
-
