--- a/research.html
+++ b/research.html
@@ -4,24 +4,66 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Research – Tejasi Gupta</title>
+  <meta name="description" content="Research interests and ongoing work by Tejasi Gupta." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+
+  <!-- Top bar -->
   <header class="topbar">
     <nav class="nav">
-      <a href="/" class="nav-link">Home</a>
-      <a href="research.html" class="nav-link">Research</a>
+      <a href="/" class="site-name">Tejasi Gupta</a>
+
+      <div class="nav-links">
+        <a href="/" class="nav-link">Home</a>
+        <a href="research.html" class="nav-link">Research</a>
+      </div>
     </nav>
   </header>
 
+  <!-- Main page -->
   <main class="page">
+
     <section class="content">
+      <div class="hello">Research</div>
+
       <p>
-        This page will gradually collect descriptions of research problems I have worked on,
-        along with what I am currently exploring.
+        This page will gradually collect descriptions of research problems I have worked on, along with what I am currently exploring.
       </p>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="icon-row">
+
+        <a class="icon-link" href="https://www.linkedin.com/in/tejasi-gupta-959815156/" target="_blank" aria-label="LinkedIn">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M20.45 20.45h-3.56v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85
+              0-2.13 1.45-2.13 2.95v5.66H9.35V9h3.41v1.56h.05c.47-.9
+              1.63-1.85 3.36-1.85 3.59 0 4.25 2.36 4.25
+              5.43v6.31ZM5.34 7.43a2.07 2.07 0 1 1 0-4.14
+              2.07 2.07 0 0 1 0 4.14ZM7.12 20.45H3.56V9
+              h3.56v11.45Z"/>
+          </svg>
+        </a>
+
+        <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M20 4H4c-1.1 0-2 .9-2
+              2v12c0 1.1.9 2 2
+              2h16c1.1 0 2-.9
+              2-2V6c0-1.1-.9-2-2-2Zm0
+              4-8 5-8-5V6l8
+              5 8-5Z"/>
+          </svg>
+        </a>
+
+      </div>
+    </footer>
+
   </main>
 </body>
 </html>
