--- a/research.html
+++ b/research.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Research – Tejasi Gupta</title>
-  <meta name="description" content="Research interests and ongoing work by Tejasi Gupta." />
+  <meta name="description" content="Research interests and projects by Tejasi Gupta." />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -26,11 +26,46 @@
   <main class="page">
 
     <section class="content">
+
       <div class="hello">Research</div>
 
       <p>
-        This page will gradually collect descriptions of research problems I have worked on, along with what I am currently exploring.
+        My interests lie in computational biophysics and mathematically grounded
+        modelling of biomolecular structure. I am especially drawn to
+        representation choices that make assumptions explicit and keep the link
+        between geometry and inference interpretable.
       </p>
+
+      <hr style="margin:40px 0; opacity:0.2;">
+
+      <h2 style="margin-bottom:8px;">
+        Understanding the Structural Organization of Biomolecular Assemblies
+        Using Graph-Theoretic Techniques
+      </h2>
+
+      <p style="opacity:0.85; margin-top:0;">
+        <strong>Computational Biophysics</strong>
+      </p>
+
+      <p>
+        Developed a Python pipeline that maps biomolecular complexes (PDB data)
+        to graphs by defining adjacency through distance-based interaction
+        criteria. Constructed and analysed the resulting networks using
+        standard graph-theoretic objects (adjacency and distance matrices) and
+        network measures to probe structural organisation and interface
+        connectivity.
+      </p>
+
+      <p style="opacity:0.85;">
+        Supervised by Dr. Debayan Chakraborty<br>
+        Department of Theoretical Physics<br>
+        The Institute of Mathematical Sciences (IMSc), Chennai
+      </p>
+
+      <p style="opacity:0.75;">
+        Implementation archived in a private research repository.
+      </p>
+
     </section>
 
     <!-- Footer -->
