--- a/research.html
+++ b/research.html
@@ -1,104 +1,39 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Research – Tejasi Gupta</title>
-  <meta name="description" content="Research interests and projects by Tejasi Gupta." />
-  <link rel="stylesheet" href="style.css" />
-</head>
+<section class="content">
 
-<body>
+  <div class="hello" style="font-size:26px;">Research</div>
 
-  <!-- Top bar -->
-  <header class="topbar">
-    <nav class="nav">
-      <a href="/" class="site-name">Tejasi Gupta</a>
+  <hr style="margin:32px 0; opacity:0.2;">
 
-      <div class="nav-links">
-        <a href="/" class="nav-link">Home</a>
-        <a href="research.html" class="nav-link">Research</a>
-      </div>
-    </nav>
-  </header>
+  <!-- Project 1 -->
+  <div class="project-area">
 
-  <!-- Main page -->
-  <main class="page">
+    <h2>
+      Understanding the Structural Organization of Biomolecular Assemblies
+      Using Graph-Theoretic Techniques
+    </h2>
 
-    <section class="content">
+    <p class="project-meta">
+      <strong>Computational Biophysics</strong>
+    </p>
 
-      <div class="hello">Research</div>
+    <p>
+      Developed a Python-based computational pipeline to construct and analyse
+      graph representations of biomolecular assemblies derived from structural
+      (PDB) data. Implemented distance-based interaction modelling, adjacency
+      construction, and network-theoretic analysis to investigate structural
+      organisation in biomolecular complexes.
+    </p>
 
-      <p>
-        My interests lie in computational biophysics and mathematically grounded
-        modelling of biomolecular structure. I am especially drawn to
-        representation choices that make assumptions explicit and keep the link
-        between geometry and inference interpretable.
-      </p>
+    <p class="project-meta">
+      Supervised by Dr. Debayan Chakraborty<br>
+      Department of Theoretical Physics<br>
+      The Institute of Mathematical Sciences (IMSc), Chennai
+    </p>
 
-      <hr style="margin:40px 0; opacity:0.2;">
+    <p class="project-note">
+      Implementation archived in a private GitHub research repository.
+    </p>
 
-      <h2 style="margin-bottom:8px;">
-        Understanding the Structural Organization of Biomolecular Assemblies
-        Using Graph-Theoretic Techniques
-      </h2>
+  </div>
 
-      <p style="opacity:0.85; margin-top:0;">
-        <strong>Computational Biophysics</strong>
-      </p>
-
-      <p>
-        Developed a Python pipeline that maps biomolecular complexes (PDB data)
-        to graphs by defining adjacency through distance-based interaction
-        criteria. Constructed and analysed the resulting networks using
-        standard graph-theoretic objects (adjacency and distance matrices) and
-        network measures to probe structural organisation and interface
-        connectivity.
-      </p>
-
-      <p style="opacity:0.85;">
-        Supervised by Dr. Debayan Chakraborty<br>
-        Department of Theoretical Physics<br>
-        The Institute of Mathematical Sciences (IMSc), Chennai
-      </p>
-
-      <p style="opacity:0.75;">
-        Implementation archived in a private research repository.
-      </p>
-
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="icon-row">
-
-        <a class="icon-link" href="https://www.linkedin.com/in/tejasi-gupta-959815156/" target="_blank" aria-label="LinkedIn">
-          <svg class="icon" viewBox="0 0 24 24">
-            <path fill="currentColor"
-              d="M20.45 20.45h-3.56v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85
-              0-2.13 1.45-2.13 2.95v5.66H9.35V9h3.41v1.56h.05c.47-.9
-              1.63-1.85 3.36-1.85 3.59 0 4.25 2.36 4.25
-              5.43v6.31ZM5.34 7.43a2.07 2.07 0 1 1 0-4.14
-              2.07 2.07 0 0 1 0 4.14ZM7.12 20.45H3.56V9
-              h3.56v11.45Z"/>
-          </svg>
-        </a>
-
-        <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
-          <svg class="icon" viewBox="0 0 24 24">
-            <path fill="currentColor"
-              d="M20 4H4c-1.1 0-2 .9-2
-              2v12c0 1.1.9 2 2
-              2h16c1.1 0 2-.9
-              2-2V6c0-1.1-.9-2-2-2Zm0
-              4-8 5-8-5V6l8
-              5 8-5Z"/>
-          </svg>
-        </a>
-
-      </div>
-    </footer>
-
-  </main>
-</body>
-</html>
+</section>
