--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 
     <section class="content">
 
-      <div class="hello" style="font-size:26px;">Research</div>
+      <div class="hello">Research</div>
 
       <hr style="margin:32px 0; opacity:0.2;">
 
@@ -58,7 +58,13 @@
         </p>
 
         <p class="project-note">
-          Implementation archived in a private GitHub research repository.
+          Implementation archived in a private GitHub research repository.<br>
+          Public project overview:
+          <a href="https://github.com/tejasig/biomolecular-graph-analysis"
+             target="_blank"
+             style="color:rgba(170,90,255,0.9); text-decoration:none;">
+            biomolecular-graph-analysis
+          </a>
         </p>
 
       </div>
