--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html> 
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tejasi Gupta</title>
-  <meta name="description" content="Tejasi Gupta — undergraduate Chemistry student interested in computational biophysics and molecular modelling." />
-  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Tejasi Gupta — undergraduate Chemistry student interested in computational molecular sciences." />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -14,7 +14,6 @@
   <header class="topbar">
     <nav class="nav">
       <a href="/" class="site-name">Tejasi Gupta</a>
-
       <div class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <a href="research.html" class="nav-link">Research</a>
@@ -35,42 +34,33 @@
       <div class="hello">Hi, I am Tejasi!</div>
 
       <p>
-        I am currently an undergraduate student pursuing a degree in Chemistry at St. Stephen’s College,
-        University of Delhi, and I am drawn to questions about how biomolecules are organised and interact
-        with one another. I am particularly interested in using computational tools to explore the structure
-        hidden within complex systems, in a way that remains physically and chemically meaningful.
+        I am an undergraduate student in Chemistry at St. Stephen’s College,
+        University of Delhi. My interests lie in computational molecular sciences,
+        particularly in modelling biomolecular systems in ways that preserve
+        physical and mathematical structure.
       </p>
 
       <p>
-        Working with biomolecular data has often involved translating physical systems into graph-based
-        representations, where relationships between components can be studied systematically. This has
-        led me to develop Python-based analysis pipelines to process biomolecular structural data, construct
-        graph-based representations, and explore patterns that are not immediately visible from raw molecular
-        coordinates. I have also been engaging with molecular dynamics simulations as a way to connect
-        structural organisation with underlying physical motion and interactions at the atomic scale.
-        Through this work, I have had to make explicit choices about connectivity, representation, and
-        modelling assumptions, which has made questions of interpretability central to how I analyse results
-        and draw conclusions.
+        My work spans molecular dynamics simulations, structural analysis of
+        biomolecular assemblies, graph-theoretic modelling, and computational
+        approaches relevant to drug discovery. I am especially interested in
+        representation choices that make modelling assumptions explicit and
+        interpretable.
       </p>
 
       <p>
-        Building these pipelines step by step has been an important part of how I learn, as it highlights
-        both the strengths and limitations of different modelling choices. Alongside this, I have come to
-        appreciate the role of mathematics and physics in shaping how problems in chemistry and biology are
-        framed, and in clarifying the assumptions underlying computational approaches.
+        I enjoy building computational pipelines from first principles,
+        translating physical systems into structured mathematical objects,
+        and analysing how geometry induces connectivity and organisation.
       </p>
 
-      <p>
-        I am broadly interested in computational biophysics and molecular modelling, particularly in areas
-        where ideas from physics, chemistry, and mathematics intersect. This page is a brief reflection of
-        what I am currently exploring and the way I like to think about scientific work.
-      </p>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="icon-row">
 
+        <!-- LinkedIn -->
         <a class="icon-link" href="https://www.linkedin.com/in/tejasi-gupta-959815156/" target="_blank" aria-label="LinkedIn">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
@@ -83,6 +73,25 @@
           </svg>
         </a>
 
+        <!-- GitHub -->
+        <a class="icon-link" href="https://github.com/tejasig" target="_blank" aria-label="GitHub">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17
+              6.84 9.49.5.09.66-.22.66-.48
+              0-.24-.01-1.02-.01-1.85-2.78.6-3.37-1.18-3.37-1.18
+              -.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61
+              1 .07 1.53 1.03 1.53 1.03.9 1.53 2.35 1.09
+              2.92.83.09-.65.35-1.09.63-1.34-2.22-.25-4.56-1.11-4.56-4.95
+              0-1.1.39-2 .1-2.71 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 6.8c.85 0
+              1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.29.71.1 1.61.05 2.71
+              0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85
+              0 1.34-.01 2.42-.01 2.75 0 .27.17.58.67.48A10.01 10.01 0 0 0 22 12
+              c0-5.52-4.48-10-10-10Z"/>
+          </svg>
+        </a>
+
+        <!-- Email -->
         <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
@@ -101,4 +110,3 @@
   </main>
 </body>
 </html>
-
