--- a/research.html
+++ b/research.html
@@ -14,7 +14,6 @@
   <header class="topbar">
     <nav class="nav">
       <a href="/" class="site-name">Tejasi Gupta</a>
-
       <div class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <a href="research.html" class="nav-link">Research</a>
@@ -22,7 +21,6 @@
     </nav>
   </header>
 
-  <!-- Main page -->
   <main class="page">
 
     <section class="content">
@@ -31,7 +29,6 @@
 
       <hr style="margin:32px 0; opacity:0.2;">
 
-      <!-- Project 1 -->
       <div class="project-area">
 
         <h2>
@@ -58,8 +55,8 @@
         </p>
 
         <p class="project-note">
-          Implementation archived in a private GitHub research repository.<br>
-          Public project overview:
+          Full implementation maintained in a private GitHub research repository.<br>
+          Public overview:
           <a href="https://github.com/tejasig/biomolecular-graph-analysis"
              target="_blank"
              style="color:rgba(170,90,255,0.9); text-decoration:none;">
@@ -84,6 +81,23 @@
               5.43v6.31ZM5.34 7.43a2.07 2.07 0 1 1 0-4.14
               2.07 2.07 0 0 1 0 4.14ZM7.12 20.45H3.56V9
               h3.56v11.45Z"/>
+          </svg>
+        </a>
+
+        <a class="icon-link" href="https://github.com/tejasig" target="_blank" aria-label="GitHub">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17
+              6.84 9.49.5.09.66-.22.66-.48
+              0-.24-.01-1.02-.01-1.85-2.78.6-3.37-1.18-3.37-1.18
+              -.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61
+              1 .07 1.53 1.03 1.53 1.03.9 1.53 2.35 1.09
+              2.92.83.09-.65.35-1.09.63-1.34-2.22-.25-4.56-1.11-4.56-4.95
+              0-1.1.39-2 .1-2.71 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 6.8c.85 0
+              1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.29.71.1 1.61.05 2.71
+              0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85
+              0 1.34-.01 2.42-.01 2.75 0 .27.17.58.67.48A10.01 10.01 0 0 0 22 12
+              c0-5.52-4.48-10-10-10Z"/>
           </svg>
         </a>
 
