--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>  
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tejasi Gupta</title>
-  <meta name="description" content="Tejasi Gupta — undergraduate Chemistry student interested in computational molecular sciences." />
-  <link rel="stylesheet" href="./style.css" />
+  <meta name="description" content="Tejasi Gupta — undergraduate Chemistry student interested in computational biophysics and molecular modelling." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -14,6 +14,7 @@
   <header class="topbar">
     <nav class="nav">
       <a href="/" class="site-name">Tejasi Gupta</a>
+
       <div class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <a href="research.html" class="nav-link">Research</a>
@@ -21,37 +22,47 @@
     </nav>
   </header>
 
-  <!-- Main page -->
   <main class="page">
 
-    <!-- Photo -->
+    <!-- Profile Photo -->
     <div class="photo-wrap">
       <img src="assets/profile.jpg" alt="Tejasi Gupta" class="photo">
     </div>
 
-    <!-- Text -->
+    <!-- Main Content -->
     <section class="content">
       <div class="hello">Hi, I am Tejasi!</div>
 
       <p>
-        I am an undergraduate student in Chemistry at St. Stephen’s College,
-        University of Delhi. My interests lie in computational molecular sciences,
-        particularly in modelling biomolecular systems in ways that preserve
-        physical and mathematical structure.
+        I am currently an undergraduate student pursuing a degree in Chemistry at St. Stephen’s College,
+        University of Delhi, and I am drawn to questions about how biomolecules are organised and interact
+        with one another. I am particularly interested in using computational tools to explore the structure
+        hidden within complex systems, in a way that remains physically and chemically meaningful.
       </p>
 
       <p>
-        My work spans molecular dynamics simulations, structural analysis of
-        biomolecular assemblies, graph-theoretic modelling, and computational
-        approaches relevant to drug discovery. I am especially interested in
-        representation choices that make modelling assumptions explicit and
-        interpretable.
+        Working with biomolecular data has often involved translating physical systems into graph-based
+        representations, where relationships between components can be studied systematically. This has
+        led me to develop Python-based analysis pipelines to process biomolecular structural data, construct
+        graph-based representations, and explore patterns that are not immediately visible from raw molecular
+        coordinates. I have also been engaging with molecular dynamics simulations as a way to connect
+        structural organisation with underlying physical motion and interactions at the atomic scale.
+        Through this work, I have had to make explicit choices about connectivity, representation, and
+        modelling assumptions, which has made questions of interpretability central to how I analyse results
+        and draw conclusions.
       </p>
 
       <p>
-        I enjoy building computational pipelines from first principles,
-        translating physical systems into structured mathematical objects,
-        and analysing how geometry induces connectivity and organisation.
+        Building these pipelines step by step has been an important part of how I learn, as it highlights
+        both the strengths and limitations of different modelling choices. Alongside this, I have come to
+        appreciate the role of mathematics and physics in shaping how problems in chemistry and biology are
+        framed, and in clarifying the assumptions underlying computational approaches.
+      </p>
+
+      <p>
+        I am broadly interested in computational biophysics and molecular modelling, particularly in areas
+        where ideas from physics, chemistry, and mathematics intersect. This page is a brief reflection of
+        what I am currently exploring and the way I like to think about scientific work.
       </p>
 
     </section>
@@ -61,7 +72,10 @@
       <div class="icon-row">
 
         <!-- LinkedIn -->
-        <a class="icon-link" href="https://www.linkedin.com/in/tejasi-gupta-959815156/" target="_blank" aria-label="LinkedIn">
+        <a class="icon-link"
+           href="https://www.linkedin.com/in/tejasi-gupta-959815156/"
+           target="_blank"
+           aria-label="LinkedIn">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
               d="M20.45 20.45h-3.56v-5.57c0-1.33-.03-3.04-1.85-3.04-1.85
@@ -74,25 +88,32 @@
         </a>
 
         <!-- GitHub -->
-        <a class="icon-link" href="https://github.com/tejasig" target="_blank" aria-label="GitHub">
+        <a class="icon-link"
+           href="https://github.com/tejasig"
+           target="_blank"
+           aria-label="GitHub">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
-              d="M12 2C6.48 2 2 6.48 2 12c0 4.42 2.87 8.17
-              6.84 9.49.5.09.66-.22.66-.48
-              0-.24-.01-1.02-.01-1.85-2.78.6-3.37-1.18-3.37-1.18
-              -.45-1.15-1.11-1.46-1.11-1.46-.91-.62.07-.61.07-.61
-              1 .07 1.53 1.03 1.53 1.03.9 1.53 2.35 1.09
-              2.92.83.09-.65.35-1.09.63-1.34-2.22-.25-4.56-1.11-4.56-4.95
-              0-1.1.39-2 .1-2.71 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0 1 12 6.8c.85 0
-              1.7.11 2.5.32 1.9-1.29 2.74-1.02 2.74-1.02.29.71.1 1.61.05 2.71
-              0 3.85-2.34 4.7-4.57 4.95.36.31.68.92.68 1.85
-              0 1.34-.01 2.42-.01 2.75 0 .27.17.58.67.48A10.01 10.01 0 0 0 22 12
-              c0-5.52-4.48-10-10-10Z"/>
+              d="M12 .5C5.65.5.5 5.65.5 12
+              c0 5.1 3.29 9.43 7.86 10.96.57.1.78-.25.78-.55
+              0-.27-.01-1.17-.02-2.13-3.2.7-3.87-1.54-3.87-1.54
+              -.52-1.32-1.27-1.67-1.27-1.67-1.04-.71.08-.7.08-.7
+              1.15.08 1.75 1.18 1.75 1.18 1.02 1.75 2.67 1.25 3.32.96
+              .1-.74.4-1.25.73-1.54-2.56-.29-5.25-1.28-5.25-5.69
+              0-1.26.45-2.3 1.18-3.11-.12-.29-.51-1.46.11-3.05
+              0 0 .97-.31 3.18 1.19a10.9 10.9 0 0 1 5.8 0
+              C17.83 4.96 18.8 5.27 18.8 5.27c.62 1.59.23 2.76.11 3.05
+              .73.81 1.18 1.85 1.18 3.11 0 4.42-2.7 5.4-5.27 5.68
+              .41.35.77 1.03.77 2.08 0 1.5-.01 2.71-.01 3.08
+              0 .3.21.66.79.55A11.51 11.51 0 0 0 23.5 12
+              C23.5 5.65 18.35.5 12 .5Z"/>
           </svg>
         </a>
 
         <!-- Email -->
-        <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
+        <a class="icon-link"
+           href="mailto:tejasi1202@gmail.com"
+           aria-label="Email">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
               d="M20 4H4c-1.1 0-2 .9-2
