--- a/research.html
+++ b/research.html
@@ -101,6 +101,29 @@
           </svg>
         </a>
 
+                <!-- GitHub -->
+        <a class="icon-link"
+           href="https://github.com/tejasig"
+           target="_blank"
+           aria-label="GitHub">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M12 .5C5.65.5.5 5.65.5 12
+              c0 5.1 3.29 9.43 7.86 10.96.57.1.78-.25.78-.55
+              0-.27-.01-1.17-.02-2.13-3.2.7-3.87-1.54-3.87-1.54
+              -.52-1.32-1.27-1.67-1.27-1.67-1.04-.71.08-.7.08-.7
+              1.15.08 1.75 1.18 1.75 1.18 1.02 1.75 2.67 1.25 3.32.96
+              .1-.74.4-1.25.73-1.54-2.56-.29-5.25-1.28-5.25-5.69
+              0-1.26.45-2.3 1.18-3.11-.12-.29-.51-1.46.11-3.05
+              0 0 .97-.31 3.18 1.19a10.9 10.9 0 0 1 5.8 0
+              C17.83 4.96 18.8 5.27 18.8 5.27c.62 1.59.23 2.76.11 3.05
+              .73.81 1.18 1.85 1.18 3.11 0 4.42-2.7 5.4-5.27 5.68
+              .41.35.77 1.03.77 2.08 0 1.5-.01 2.71-.01 3.08
+              0 .3.21.66.79.55A11.51 11.51 0 0 0 23.5 12
+              C23.5 5.65 18.35.5 12 .5Z"/>
+          </svg>
+        </a>
+
         <a class="icon-link" href="mailto:tejasi1202@gmail.com" aria-label="Email">
           <svg class="icon" viewBox="0 0 24 24">
             <path fill="currentColor"
